- Implemented a fix that prevented "Oblique" styles from being detected as different than their roman counter-part 
- Implemented langauge locale picker, which allows previewing Opentype locl substitutions
- Implemented default translations for frontend strings
- Included translations: English, German, Finnish, Persian
- Improved rendering for right-to-left languages in frontend and backend
- ! Deprecating Specimen and Link UI fields; those will get removed with 0.5.0 and replaced with hooks to enable customising
- ! Deprecating "Legacy formats" now still included (hidden by default) in the admin area; those will get removed with 0.5.0

# 0.3.7 & 0.3.8
- Implemented shortcode attribute to overwrite or dynamically set the default text
- Implemented shortcode attribute to overwrite or dynamically set the fonts and font files
- Implemented events called on the wrapper after initialisation and font change
- Now serving all frontend javascript assets as one minified file (previously 20+ dynamic file calls)
- Now serving all backend javascript assets as one minified file (previously 30+ dynamic file calls)
- Fixed a compability issue arising from other plugins using the same javascript dependency manager
- Fixed an issue where OpenType features that are enabled by default did not have their UI elements reflect that correctly
- Fixed an issue where switching fonts would revert selections made in the OpenType modal

# 0.3.6
- Implemented a feature that strips pasted text of its original styling
- Fixed an issue that caused dropdowns to not work on mobile devices
- Fixed an issue in the admin area that overwrote font names when uploading several fonts at once
- Fixed several styling and preview issues in the admin area

# 0.3.1 - 0.3.5
- Hotfix to prevent buggy PHP 5.6 T_PAAMAYIM_NEKUDOTAYIM (::) error
- Hotfix to prevent directory permissions check to detect a false positive
- Hotfix to make admin area Fontsamlpler dropdowns correctly select picked fonts

# 0.3.0